test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/extra_credit/compound_assign_to_nested_array.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[40]:
  int
  identifier(main)
  (
  void
  )
  {
  long
  identifier(arr)
  [
  const int(2)
  ]
  [
  const int(2)
  ]
  =
  {
  {
  const int(1)
  ,
  const int(2)
  }
  ,
  {
  const int(3)
  ,
  const int(4)
  }
  }
  ;
  identifier(arr)
  [
  const int(1)
  ]
  +=
  const int(1)
  ;
  return
  const int(0)
  ;
  }
